--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "format": "prettier --write 'src/**/*.js' 'src/**/*.vue'"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
+    "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
